@@ -638,7 +638,6 @@
     "*://*.thewrap.com/*",
     "*://*.thueringer-allgemeine.de/*",
     "*://*.tijd.be/*",
-    "*://*.time.com/*",
     "*://*.timeshighereducation.com/*",
     "*://*.timesofindia.com/*",
     "*://*.timesofindia.indiatimes.com/*",
